compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__string_variable_in_todo_constant_message.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "\npub const message = \"hello\"\npub const wibble = todo as message\n"
---
----- SOURCE CODE

pub const message = "hello"
pub const wibble = todo as message


----- ERROR
error: Constant todo found
  ┌─ /src/one/two.gleam:3:20
  │
3 │ pub const wibble = todo as message
  │                    ^^^^^^^^^^^^^^^ This code is incomplete

This code will crash if it is run. Be sure to finish it before running your
program.
